k8s/apps/frontend/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
